Resolved contrast issues on infoicon block

--- a/docroot/themes/capit/stylesheets/main.css
+++ b/docroot/themes/capit/stylesheets/main.css
@@ -727,7 +727,7 @@ margin-bottom: 0px;
   right: 22px;
 }
 .region-content .admission-block{
-  background-color: #119a80;
+  background-color: #0A5244;
   color: #fff;
   padding: 25px;
   margin-top: 30px;
